src/test/ui/unsafe/unsafe-block-without-braces.stderr
error: expected `{`, found `std`
  --> $DIR/unsafe-block-without-braces.rs:3:9
   |
LL |         std::mem::transmute::<f32, u32>(1.0);
   |         ^^^----------------------------------
   |         |
   |         expected `{`
   |         help: try placing this code inside a block: `{ std::mem::transmute::<f32, u32>(1.0); }`

error: aborting due to previous error

